--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -17,7 +17,7 @@
 	--color-sidebar-foreground: var(--sidebar-foreground);
 	--color-sidebar: var(--sidebar);
 	--color-chart-5: var(--chart-5);
-	--color-chart-4: var(--chart-4);
+	--color-chart-4: var(--chart-4)
 	--color-chart-3: var(--chart-3);
 	--color-chart-2: var(--chart-2);
 	--color-chart-1: var(--chart-1);
@@ -79,8 +79,8 @@
 }
 
 .dark {
-	--background: oklch(20.904% 0.00002 271.152);
-	--foreground: oklch(0.985 0 0);
+	--background: oklch(0.1450 0 0);
+  	--foreground: oklch(0.9850 0 0);
 	--card: oklch(0.205 0 0);
 	--card-foreground: oklch(0.985 0 0);
 	--popover: oklch(0.205 0 0);
