--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -79,30 +79,31 @@
 }
 
 .dark {
-	--background: oklch(0.1450 0 0);
-  	--foreground: oklch(0.9850 0 0);
-	--card: oklch(0.205 0 0);
-	--card-foreground: oklch(0.985 0 0);
-	--popover: oklch(0.205 0 0);
-	--popover-foreground: oklch(0.985 0 0);
-	--primary: oklch(0.922 0 0);
-	--primary-foreground: oklch(0.205 0 0);
-	--secondary: oklch(0.269 0 0);
-	--secondary-foreground: oklch(0.985 0 0);
-	--muted: oklch(0.269 0 0);
-	--muted-foreground: oklch(0.708 0 0);
-	--accent: oklch(0.269 0 0);
-	--accent-foreground: oklch(0.985 0 0);
-	--destructive: oklch(0.704 0.191 22.216);
-	--border: oklch(1 0 0 / 10%);
-	--input: oklch(1 0 0 / 15%);
-	--ring: oklch(0.556 0 0);
+	--background: oklch(0.2050 0 0);
+	--foreground: oklch(0.9850 0 0);
+	--card: oklch(0.2478 0 0);
+	--card-foreground: oklch(0.9850 0 0);
+	--popover: oklch(0.2690 0 0);
+	--popover-foreground: oklch(0.9850 0 0);
+	--primary: oklch(0.9183 0.0027 106.4521);
+	--primary-foreground: oklch(0.2562 0 0);
+	--secondary: oklch(0.2690 0 0);
+	--secondary-foreground: oklch(0.9850 0 0);
+	--muted: oklch(0.2690 0 0);
+	--muted-foreground: oklch(0.7080 0 0);
+	--accent: oklch(0.3710 0 0);
+	--accent-foreground: oklch(0.9850 0 0);
+	--destructive: oklch(0.7040 0.1910 22.2160);
+	--destructive-foreground: oklch(0.9850 0 0);
+	--border: oklch(0.2750 0 0);
+	--input: oklch(0.3250 0 0);
+	--ring: oklch(0.5560 0 0);
 	--chart-1: oklch(0.488 0.243 264.376);
 	--chart-2: oklch(0.696 0.17 162.48);
 	--chart-3: oklch(0.769 0.188 70.08);
 	--chart-4: oklch(0.627 0.265 303.9);
 	--chart-5: oklch(0.645 0.246 16.439);
-	--sidebar: oklch(0.205 0 0);
+	--sidebar: oklch(0.2478 0 0);
 	--sidebar-foreground: oklch(0.985 0 0);
 	--sidebar-primary: oklch(0.488 0.243 264.376);
 	--sidebar-primary-foreground: oklch(0.985 0 0);
