feat(front)/add creator information to video

--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -95,7 +95,7 @@
 	--accent-foreground: oklch(0.9850 0 0);
 	--destructive: oklch(0.7040 0.1910 22.2160);
 	--destructive-foreground: oklch(0.9850 0 0);
-	--border: oklch(0.2750 0 0);
+	--border: oklch(32.504% 0.00004 271.152);
 	--input: oklch(0.3250 0 0);
 	--ring: oklch(0.5560 0 0);
 	--chart-1: oklch(0.488 0.243 264.376);
